kubernetes/EKSonFargateManifest/06_02_django_service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: simple-note
  creationTimestamp: null
  labels:
    run: django
  name: django-nodeport
spec:
  ports:
    - port: 8000
      protocol: TCP
      targetPort: 8000
  selector:
    run: django
  type: NodePort
status:
  loadBalancer: {}
